--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "codemirror": "6.0.1",
+    "crypto-js": "^4.1.1",
     "mma-uncompress": "^1.0.1",
     "node-balanced": "^0.0.14",
     "parcel-bundler": "1.12.5",
