--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wljs-editor",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "WLJS Code editor",
   "scripts": {
     "build": "node --max-old-space-size=8192 ./node_modules/.bin/rollup --config rollup.config.mjs"
@@ -12,6 +12,7 @@
     ],
     "wlkernel": "src/boxes.wl",
     "wl": "src/processor.wl",
+    "styles": "src/styles.css",
     "autocomplete": "src/autocomplete.js",
     "priority": -10,
     "important": true
