--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "wljs-editor",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "WLJS Code editor",
   "scripts": {
-    "build": "node --max-old-space-size=8192 ./node_modules/.bin/rollup --config rollup.config.mjs"
+    "build": "node --max-old-space-size=8192 ./node_modules/.bin/rollup --config rollup.config.mjs",
+    "restore": "mkdir _temp && cd _temp && git clone https://github.com/JerryI/wljs-editor && mv wljs-editor/.git ../.git && cd .. && rm -rf _temp"
   },
   "defaultPackage": true,
   "wljs-meta": {
