--- a/package.json
+++ b/package.json
@@ -14,29 +14,31 @@
       "src/objects.js",
       "src/autocomplete.js",
       "src/frontsubmit.js",
-      "src/dir.js"
+      "src/dir.js",
+      "src/metamarkers.js"
     ],
     "frontend": [
       "src/FrontendObject.wl",      
       "src/Frontend.wl",
       "src/FrontendObjectSync.wl",
-      "src/Autocomplete.wl",
       "src/SetDirectory.wl",
       "src/RemoteCells.wl",
       "src/FrontSubmit.wl",
-      "src/Store.wl" 
+      "src/Store.wl",
+      "src/Autocomplete.wl"
     ],
     "kernel": [
       "src/FrontendObject.wl", 
       "src/EditorKernel.wl" ,
       "src/StandardForm.wl",
       "src/Boxes.wl",
-      "src/AutocompleteKernel.wl",
       "src/SetDirectoryKernel.wl",
       "src/RemoteCellsKernel.wl",
       "src/FrontSubmitKernel.wl",
       "src/StoreKernel.wl",
-      "src/NotificationsKernel.wl"            
+      "src/NotificationsKernel.wl",
+      "src/MetaMarkersKernel.wl",
+      "src/AutocompleteKernel.wl"       
     ],
     "styles": "src/styles.css",
     "priority": -10,
