--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "WLJS Code editor",
   "scripts": {
     "build": "node --max-old-space-size=8192 ./node_modules/.bin/rollup --config rollup.config.mjs",
-    "restore": "mkdir _temp && cd _temp && git clone https://github.com/JerryI/wljs-editor && mv wljs-editor/.git ../.git && cd .. && rm -rf _temp"
+    "restore": "mkdir _temp && cd _temp && git clone --branch dev https://github.com/JerryI/wljs-editor && mv wljs-editor/.git ../.git && cd .. && rm -rf _temp"
   },
   "defaultPackage": true,
   "wljs-meta": {
