--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wljs-editor",
-  "version": "0.5.9",
+  "version": "0.6.0",
   "description": "WLJS Code editor",
   "scripts": {
     "build": "node --max-old-space-size=8192 ./node_modules/.bin/rollup --config rollup.config.mjs",
@@ -43,6 +43,7 @@
       "src/SetDirectoryKernel.wl",
       "src/RemoteCellsKernel.wl",
       "src/FrontSubmitKernel.wl",
+      "src/FrontendObjectMissingFetch.wl",
       "src/StoreKernel.wl",
       "src/NotificationsKernel.wl",
       "src/MetaMarkersKernel.wl",
