--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wljs-editor",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "description": "WLJS Code editor",
   "scripts": {
     "build": "node --max-old-space-size=8192 ./node_modules/.bin/rollup --config rollup.config.mjs",
@@ -38,9 +38,11 @@
     ],
     "kernel": [
       "src/FrontendObject.wl",
+      "src/FrontendObjectExtensions.wl",
       "src/EditorKernel.wl",
       "src/StandardForm.wl",
       "src/Boxes.wl",
+      "src/BoxesWorkarounds.wl",
       "src/OffloadExtension.wl",
       "src/SetDirectoryKernel.wl",
       "src/RemoteCellsKernel.wl",
