--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "wljs-editor",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "description": "WLJS Code editor",
   "scripts": {
     "build": "node --max-old-space-size=8192 ./node_modules/.bin/rollup --config rollup.config.mjs",
+    "demo": "parcel ./playground/index.html",
+    "demo-dist": "parcel build ./playground/index.html --out-dir ./github-pages/ --public-url https://jerryi.github.io/cm6/",
     "restore": "mkdir _temp && cd _temp && git clone --branch dev https://github.com/JerryI/wljs-editor && mv wljs-editor/.git ../.git && cd .. && rm -rf _temp"
   },
   "defaultPackage": true,
@@ -82,7 +84,7 @@
         "label": "Hidden comment",
         "event": "comment_selected",
         "visible": "selection"
-      }      
+      }
     ]
   },
   "repository": {
@@ -107,6 +109,7 @@
     "mma-uncompress": "^1.0.1",
     "node-balanced": "^0.0.14",
     "parcel-bundler": "1.12.5",
+    "parsel": "^0.3.0",
     "priceless-mathematica": "^1.2.1",
     "rainbowbrackets": "^2.0.2",
     "rollup": "^3.21.6"
