--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "styles": "src/styles.css",
     "priority": -10,
     "important": true,
+    "cellExportRequired": true,
     "category": "Editor",
     "contextMenu": [
       {
