--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wljs-editor",
-  "version": "0.9.7",
+  "version": "0.9.8",
   "description": "WLJS Code editor",
   "scripts": {
     "build": "node --max-old-space-size=8192 ./node_modules/.bin/rollup --config rollup.config.mjs",
@@ -71,6 +71,11 @@
         "event": "iconize_selected",
         "visible": "selection"
       },
+      {
+        "label": "Store in notebook",
+        "event": "store_selected",
+        "visible": "selection"
+      },      
       {
         "label": "Simplify",
         "event": "simplify_selected",
